--- a/OttoChecks/build.gradle
+++ b/OttoChecks/build.gradle
@@ -6,18 +6,19 @@ buildscript {
         classpath 'com.android.tools.build:gradle:0.6.+'
     }
 }
+
 apply plugin: 'java'
 
-repositories {
-    mavenCentral()
-}
-
-sourceCompatibility = 1.5
+sourceCompatibility = 1.6
 version = '1.0'
 jar {
     manifest {
-        attributes 'Implementation-Title': 'Gradle Quickstart', 'Implementation-Version': version
+        attributes 'Lint-Registry': 'com.atomicrobot.demo.lint.otto.OttoIssueRegistry'
     }
+}
+
+repositories {
+    mavenCentral()
 }
 
 dependencies {
