--- a/SickApp/build.gradle
+++ b/SickApp/build.gradle
@@ -20,7 +20,23 @@ android {
         minSdkVersion 16
         targetSdkVersion 19
     }
+
+    sourceSets {
+        main {
+            // Lint+Gradle needs this...not sure why...
+            manifest.srcFile 'AndroidManifest.xml'
+        }
+    }
+
+    buildTypes {
+        release {
+            runProguard true
+            proguardFile getDefaultProguardFile('proguard-android.txt')
+            proguardFile 'proguard-project.txt'
+        }
+    }
 }
 
 dependencies {
+    compile "com.squareup:otto:1.3.4"
 }
